--- a/Classification of Vehicle using Deep Learning CNN.ipynb
+++ b/Classification of Vehicle using Deep Learning CNN.ipynb
@@ -12,6 +12,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "Datasets: https://drive.google.com/drive/folders/1Q6bL80OTBk8W51HBF7H1cMoED-8G1WK8?usp=share_link"
+      ],
+      "metadata": {
+        "id": "d6qXQ-gRoeOE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 24,
       "metadata": {
         "id": "1vUaTI1wPFH_"
@@ -890,7 +901,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1aGkA2lMfrlqWmGgjazbCpq6Zxv_2iD3Q",
-      "authorship_tag": "ABX9TyOVg0rF7Bofh82k2jKZ82Mp",
+      "authorship_tag": "ABX9TyNzpbDbeyE7Ius5rnMcwUtK",
       "include_colab_link": true
     },
     "gpuClass": "standard",
